HTML/CSS structure and JS consts

--- a/index.html
+++ b/index.html
@@ -2,11 +2,50 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Project 1</title>
+  <title>Project Zero</title>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="public/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="public/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
-  <h1>Project Zero</h1>
+
+  <header>
+
+    <h1>Hue Hunter</h1>
+
+  </header>
+
+  <main>
+
+      <div class="gameBoard">
+      </div>
+
+      <div class="difficulty">
+        <button type="button" class="easyButton">Play Easy</button>
+        <button type="button" class="hardButton">Play Hard</button>
+      </div>
+
+      <div class="inplay">
+        <button type="button" class="resetButton">Reset Game</button>
+        <button type="button" class="nextButton">Next Round</button>
+      </div>
+
+      <div class="scoreSound">
+        <p>Quickest Time: <span class="quickTime"></span></p>
+        <button type="button" class="soundOnOff">Sound On/Off</button>
+      </div>
+
+  </main>
+
+  <footer>
+    <br>
+    <br>
+     <p>Created by &#60Nimesh Patel&#62</p>
+
+  </footer>
 </body>
 </html>
