More logic added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <main>
 
       <div class="gameBoard">
+        <p class="roundDisplay"> Round <span class="round"></span></p>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
       </div>
 
       <div class="difficulty">
@@ -36,14 +42,13 @@
 
       <div class="scoreSound">
         <p>Quickest Time: <span class="quickTime"></span></p>
+        <audio></audio>
         <button type="button" class="soundOnOff">Sound On/Off</button>
       </div>
 
   </main>
 
   <footer>
-    <br>
-    <br>
      <p>Created by &#60Nimesh Patel&#62</p>
 
   </footer>
