Slight change in logic

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       </div>
 
       <div class="scoreSound">
-        <p>Quickest Time: <span class="quickTime"></span></p>
-        <audio></audio>
+        <p>Quickest Time: <span class="quickTime"></span> seconds</p>
+        <audio src="./src/assets/hue_hunter_background.mp3"></audio>
         <button type="button" class="soundOnOff">Sound On/Off</button>
       </div>
 
   </main>
 
   <footer>
-     <p>Created by &#60Nimesh Patel&#62</p>
+     <p>Created by &#60&#62</p>
 
   </footer>
 </body>
