More logic added

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
       <div class="scoreSound">
         <p>Quickest Time: <span class="quickTime"></span> seconds</p>
-        <audio src="./src/assets/hue_hunter_background.mp3"></audio>
+        <audio></audio>
         <button type="button" class="soundOnOff">Sound On/Off</button>
       </div>
 
   </main>
 
-  <footer>
+  <!-- <footer> -->
      <p>Created by &#60&#62</p>
 
   </footer>
