Double shuffle issue sorted

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <main>
 
       <div class="gameBoard">
-        <p class="roundDisplay"> Round <span class="round"></span></p>
+        <audio src="public/assets/correct_ping.mp3"></audio>
+        <p hidden class="roundDisplay"> Round <span class="round"></span></p>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
@@ -38,20 +39,20 @@
       </div>
 
       <div class="inplay">
-        <button type="button" class="resetButton">Reset Game</button>
-        <button type="button" class="nextButton">Next Round</button>
+        <button hidden type="button" class="resetButton">Reset Game</button>
+        <button hidden type="button" class="nextButton">Next Round</button>
       </div>
 
       <div class="scoreSound">
         <p>Quickest Time: <span class="quickTime"></span> seconds</p>
-        <audio></audio>
+        <audio src="public/assets/hue_hunter_background.mp3"></audio>
         <button type="button" class="soundOnOff">Sound On/Off</button>
       </div>
 
   </main>
 
   <footer>
-     <p>Created by &#60&#62</p>
+     <p>Created by &#60&#32;&#62&#32;Nimesh Patel&#32;&#60&#32;&#62</p>
 
   </footer>
 </body>
