Game logic complete

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script src="public/js/app.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="public/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <script src="dist/sweetalert.min.js"></script>
   <link rel="stylesheet" type="text/css" href="dist/sweetalert.css"> -->
 </head>
@@ -40,7 +42,7 @@
 
       <div class="inplay">
         <button hidden type="button" class="resetButton">Reset Game</button>
-        <button hidden type="button" class="nextButton">Next Round</button>
+        <button hidden type="button" class="nextButton animated infinite pulse">Next Round</button>
       </div>
 
       <div class="scoreSound">
@@ -52,8 +54,15 @@
   </main>
 
   <footer>
-     <p>Created by &#60&#32;&#62&#32;Nimesh Patel&#32;&#60&#32;&#62</p>
-
+    <div class="leftmedia">
+      <!-- <a href="mailto:n2kp@hotmail.com"><i class="fa fa-envelope email" style="font-size:24px" aria-hidden="true"></i></a> -->
+      <!-- <a href="https://twitter.com/n2kp" target="_blank"><i class="fa fa-twitter twit" style="font-size:24px" aria-hidden="true"></i></a> -->
+    </div>
+    <p>Created by &#60&#32;&#62&#32;Nimesh Patel&#32;&#60&#32;&#62</p>
+    <div class="rightmedia">
+      <!-- <a href="https://www.linkedin.com/in/nimesh-patel-41b782122/" target="_blank"><i class="fa fa-linkedin linked" style="font-size:24px" aria-hidden="true"></i></a> -->
+      <!-- <a href="https://github.com/n2kp" target="_blank"><i class="fa fa-github git" style="font-size:24px" aria-hidden="true"></i></a> -->
+    </div>
   </footer>
 </body>
 </html>
