Preliminary CSS complete

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>Project Zero</title>
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -16,7 +17,7 @@
 <body>
   <header>
 
-    <h1 class="animated lightSpeedIn">Hue Hunter</h1>
+    <h1 class="animated jello">Hue Hunter</h1>
 
   </header>
 
@@ -27,14 +28,18 @@
         <p hidden class="roundDisplay"> Round <span class="round"></span></p>
       </div>
 
+      <div class="instructions">
+        <p>Instructions: <br><br>Simply move the blocks in the middle of the palette so that they create the correct gradient between the two end colours. After you complete each round, press the Next Round button to continue to the following round. Hardly rocket science!'</p>
+      </div>
+
       <div class="difficulty">
         <button type="button" class="easyButton">Play Easy</button>
         <button type="button" class="hardButton">Play Hard</button>
       </div>
 
       <div class="inplay">
-        <button hidden type="button" class="resetButton">Reset Game</button>
-        <button hidden type="button" class="nextButton animated infinite pulse">Next Round</button>
+        <button type="button" class="resetButton">Reset Game</button>
+        <button type="button" class="nextButton animated infinite pulse">Next Round</button>
       </div>
 
       <div class="scoreSound">
@@ -48,7 +53,14 @@
   <footer>
 
     <div class="leftfoot">
-      <p>Created by &#60&#62&#32;Nimesh Patel&#32;&#60&#62</p>
+      <p>
+        <span class="foot1">Created</span>
+        <span class="foot2">by</span>
+        <span class="foot3">&#60&#62</span>
+        <span class="foot4">Nimesh</span>
+        <span class="foot5">Patel</span>
+        <span class="foot6">&#60&#62</span>
+      </p>
     </div>
 
     <div class="rightfoot">
