CSS complete, game finished

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
 
-    <h1 class="animated jello">Hue Hunter</h1>
+    <h1 class="animated flash">Hue Hunter</h1>
 
   </header>
 
@@ -29,7 +29,7 @@
       </div>
 
       <div class="instructions">
-        <p>Instructions: <br><br>Simply move the blocks in the middle of the palette so that they create the correct gradient between the two end colours. After you complete each round, press the Next Round button to continue to the following round. Hardly rocket science!'</p>
+        <p><strong class= "instruct">Instructions:</strong><br><br>Simply move the blocks in the middle of the palette so that they create the correct gradient between the two end colours. After you complete each round, press the Next Round button to continue to the following round. Hardly rocket science!'</p>
       </div>
 
       <div class="difficulty">
@@ -38,8 +38,8 @@
       </div>
 
       <div class="inplay">
-        <button type="button" class="resetButton">Reset Game</button>
-        <button type="button" class="nextButton animated infinite pulse">Next Round</button>
+        <button hidden type="button" class="resetButton">Reset Game</button>
+        <button hidden type="button" class="nextButton animated infinite pulse">Next Round</button>
       </div>
 
       <div class="scoreSound">
