Palettes and Sequences removed from app.js and inserted into new js files

--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project Zero</title>
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-  <script src="public/js/app.js" charset="utf-8"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link rel="stylesheet" href="public/css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-  <header>
 
-    <h1 class="animated flash">Hue Hunter</h1>
+  <head>
 
-  </header>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <main>
+    <title>Project Zero</title>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="public/js/app.js" charset="utf-8"></script>
+    <script src="public/js/elementStorage.js" charset="utf-8"></script>
+    <script src="public/js/paletteStorage.js" charset="utf-8"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="public/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  </head>
+
+  <body>
+
+    <header>
+      <h1 class="animated flash">Hue Hunter</h1>
+    </header>
+
+    <main>
 
       <div class="gameBoard">
         <audio src="public/assets/correct_ping.mp3"></audio>
@@ -48,29 +54,30 @@
         <button type="button" class="soundOnOff">Sound On/Off</button>
       </div>
 
-  </main>
+    </main>
 
-  <footer>
+    <footer>
 
-    <div class="leftfoot">
-      <p>
-        <span class="foot1">Created</span>
-        <span class="foot2">by</span>
-        <span class="foot3">&#60&#62</span>
-        <span class="foot4">Nimesh</span>
-        <span class="foot5">Patel</span>
-        <span class="foot6">&#60&#62</span>
-      </p>
-    </div>
+      <div class="leftfoot">
+        <p>
+          <span class="foot1">Created</span>
+          <span class="foot2">by</span>
+          <span class="foot3">&#60&#62</span>
+          <span class="foot4">Nimesh</span>
+          <span class="foot5">Patel</span>
+          <span class="foot6">&#60&#62</span>
+        </p>
+      </div>
 
-    <div class="rightfoot">
-      <a href="mailto:n2kp@hotmail.com"><i class="fa fa-envelope email" style="font-size:24px" aria-hidden="true"></i></a>
-      <a href="https://twitter.com/n2kp" target="_blank"><i class="fa fa-twitter twit" style="font-size:24px" aria-hidden="true"></i></a>
-      <a href="https://www.linkedin.com/in/nimesh-patel-41b782122/" target="_blank"><i class="fa fa-linkedin linked" style="font-size:24px" aria-hidden="true"></i></a>
-      <a href="https://github.com/n2kp" target="_blank"><i class="fa fa-github git" style="font-size:24px" aria-hidden="true"></i></a>
-    </div>
+      <div class="rightfoot">
+        <a href="mailto:n2kp@hotmail.com"><i class="fa fa-envelope email" style="font-size:24px" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/n2kp" target="_blank"><i class="fa fa-twitter twit" style="font-size:24px" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/nimesh-patel-41b782122/" target="_blank"><i class="fa fa-linkedin linked" style="font-size:24px" aria-hidden="true"></i></a>
+        <a href="https://github.com/n2kp" target="_blank"><i class="fa fa-github git" style="font-size:24px" aria-hidden="true"></i></a>
+      </div>
 
-  </footer>
+    </footer>
 
-</body>
+  </body>
+  
 </html>
